# chuda

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  justfile  pyproject.toml  release.toml
.github/workflows/: ci.yml  release-check.yml  release.yml
crates/chuda-python/: Cargo.toml
crates/chuda-python/src/: lib.rs
cuda/: renderer.cu
python/tests/: test_bindings.py
src/: cpu.rs  gpu.rs  lib.rs  main.rs  render.rs  symbols.rs
tools/: benchmark.py  generate_symbols.py  sync-python-version.py
