[package]
name = "chuda"
version.workspace = true
edition = "2024"
license = "LGPL-3.0-or-later"
description = "CUDA-accelerated high quality truecolour ANSI image renderer"
build = "build.rs"
repository = "https://github.com/bitplane/chuda"
keywords = ["ansi", "cuda", "terminal", "image", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
include = [
    "/src/**",
    "/cuda/**",
    "/vendor/chafa/internal/chafa-symbols.c",
    "/vendor/chafa/internal/chafa-symbols-*.h",
    "/vendor/chafa/COPYING",
    "/vendor/chafa/COPYING.LESSER",
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.rs",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]

[[bin]]
name = "chuda"
path = "src/main.rs"

[workspace]
members = ["crates/chuda-python"]
resolver = "2"

[workspace.package]
version = "0.2.3"

[features]
default = ["cpu"]
cpu = ["dep:rayon"]
cuda = []

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
rayon = { version = "1.11.0", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
